--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Your Brand Here</title>
 </head>
 <body>
+    <style>
+        body {text-align: center;}
+    </style>
+<!-- Header -->
+    <header>
+        <h1>Your Brand Here</h1>
+        <h3>Your brand description here</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, ipsam earum totam iure cumque quo odit modi illum facilis id ut distinctio aperiam iusto eaque odio reprehenderit. Distinctio, at eaque.</p>
+    </header>
+<hr>
     
+
 </body>
 </html>
