Added about and an image

--- a/HTML_Semantic_Activity/index.html
+++ b/HTML_Semantic_Activity/index.html
@@ -13,10 +13,17 @@
     <header>
         <h1>Your Brand Here</h1>
         <h3>Your brand description here</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, ipsam earum totam iure cumque quo odit modi illum facilis id ut distinctio aperiam iusto eaque odio reprehenderit. Distinctio, at eaque.</p>
     </header>
 <hr>
+<!-- About the brand-->
+    <section>
+        <img src="images/yourbrandhere.jpg" alt="">
+        <h2>About</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, ipsam earum totam iure cumque quo odit modi illum facilis id ut distinctio aperiam iusto eaque odio reprehenderit. Distinctio, at eaque.</p>
+    </section>
+<hr>
     
+
 
 </body>
 </html>
