Added contact us

--- a/HTML_Semantic_Activity/index.html
+++ b/HTML_Semantic_Activity/index.html
@@ -6,9 +6,7 @@
     <title>Your Brand Here</title>
 </head>
 <body>
-    <style>
-        body {text-align: center;}
-    </style>
+    <style> body {text-align: center;}</style>
 <!-- Header -->
     <header>
         <h1>Your Brand Here</h1>
@@ -22,7 +20,30 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, ipsam earum totam iure cumque quo odit modi illum facilis id ut distinctio aperiam iusto eaque odio reprehenderit. Distinctio, at eaque.</p>
     </section>
 <hr>
-    
+    <section>
+<!-- Contact us -->
+        <form>
+        <h2>Contact us</h2>
+        <div>
+            <label for="name"><strong>Name:</strong></label>
+            <input id="name" type="text" placeholder="Juan Dela Cruz" required>
+        </div>
+<br>
+        <div>
+            <label for="email"><strong>Email:</strong></label>
+            <input id="email" type="email" placeholder="name@domain.com" required>
+        </div>
+<br>
+        <div>
+            <label for="message"><strong>What can we help you with?</strong></label>
+        </div>
+        <div>
+            <textarea id="message" cols="40" rows="5" placeholder="Message"></textarea>
+        </div>
+
+        
+        </form>
+    </section>
 
 
 </body>
